add support for REST API
